unpackaged/main/default/objects/Monthly_Revenue_Snapshot__c/Monthly_Revenue_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Monthly Revenue-Snapshot</label>
    <nameField>
        <label>Monthly Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Revenue-Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>