unpackaged/main/default/objects/Monthly_Revenue_Snapshot__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>