unpackaged/main/default/objects/Monthly_Revenue_Snapshot__c/fields/Saas_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Saas_Monthly_Fee__c</fullName>
    <label>Saas Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>